--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=info
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
