data initialization with schema.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
